add test_gene_mer.py to automated tests

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -40,3 +40,5 @@ jobs:
         cd test
         # test gene.py
         python test_gene.py
+        # test gene_mer.py
+        python test_gene_mer.py
