--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -34,11 +34,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: test
+    - name: Script testing
       run: |
         # enter the test directory
         cd test
         # test gene.py
-        python test_gene.py
+        python test_construct_gene.py
         # test gene_mer.py
-        python test_gene_mer.py
+        python test_construct_gene_mer.py
