--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -44,3 +44,5 @@ jobs:
         python test_construct_gene_mer.py
         # test construct_read.py
         python test_construct_read.py
+        # test construct_node.py
+        python test_construct_node.py
