run automated test when pushing to main and dev

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -5,7 +5,7 @@ name: amira_prototype
 
 on:
   push:
-    branches: [ "dev", "refactor" ]
+    branches: [ "main", "dev", "refactor" ]
   pull_request:
     branches: [ "main" ]
 
