--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -48,3 +48,5 @@ jobs:
         python test_construct_node.py
         # test construct_edge.py
         python test_construct_edge.py
+        # test construct_graph.py
+        python test_construct_graph.py
