--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-latest, MacOS-latest, Windows-latest ]
         python-version: [ 3.8, 3.9, "3.10", 3.11 ]
     steps:
     - uses: actions/checkout@v3
@@ -19,7 +19,7 @@ jobs:
       uses: pre-commit/action@v3.0.0
 
     - name: Run pre-commit CI
-      uses: pre-commit-ci/lite-action@v1.0.1
+      uses: pre-commit/action@v3.0.0
       if: always()
 
     - name: Install and configure Poetry
