--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,16 +28,16 @@ repos:
           --line-length=100
         ]
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.7.0
-    hooks:
-    -   id: mypy
-        additional_dependencies: [tokenize-rt==5.2.0, pandas-stubs==2.1.1.230928, types-click==7.1.8]
-        args: [
-          --strict,  # Note: try not to remove strict type checking
-          --ignore-missing-imports
-        ]
-        log_file: mypy.log
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v1.7.0
+#     hooks:
+#     -   id: mypy
+#         additional_dependencies: [tokenize-rt==5.2.0, pandas-stubs==2.1.1.230928, types-click==7.1.8]
+#         args: [
+#           --strict,  # Note: try not to remove strict type checking
+#           --ignore-missing-imports
+#         ]
+#         log_file: mypy.log
 
 -   repo: https://github.com/pycqa/flake8
     rev: 6.1.0
