--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
     hooks:
     -   id: flake8
         args: [
-          --max-line-length=100
+          --max-line-length=100,
+          --extend-ignore=E203
         ]
         log_file: flake8.log
