--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: pip install .
+      run: pip install -r requirements.txt
     
     - name: Run pre-commit hooks
       uses: pre-commit/action@v3.0.0
