--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ amira_prototype = 'amira_prototype.__main__:main'
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
+joblib = "1.2.0"
+matplotlib = "3.6.2"
+pysam = "0.20.0"
+pytest = "7.2.0"
+tqdm = "4.64.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "joblib==1.2.0", "matplotlib==3.6.2", "pysam==0.20.0", "pytest==7.2.0", "tqdm==4.64.1"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
