--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,6 @@ jobs:
         python-version: [ 3.9, "3.10", 3.11 ]
     steps:
     - uses: actions/checkout@v3
-
-    - name: Install dependencies
-      run: pip install -r requirements.txt
     
     - name: Run pre-commit hooks
       uses: pre-commit/action@v3.0.0
@@ -27,6 +24,9 @@ jobs:
 
     - name: Install and configure Poetry
       uses: snok/install-poetry@v1
+
+    - name: Install dependencies
+      run: make install
       
     - name: Install CI
       run:  make install-ci
