--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = joblib,matplotlib,numpy,pysam,scipy,tqdm
+known_third_party = joblib,matplotlib,numpy,pysam,scipy,sourmash,tqdm
