--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ joblib = "1.2.0"
 matplotlib = "3.6.2"
 pysam = "0.22.0"
 pytest = "7.2.0"
+scipy = "1.26.4"
 sourmash = "4.8.4"
 tqdm = "4.64.1"
 
