--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ amira_prototype = 'amira_prototype.__main__:main'
 python = ">=3.9,<3.13"
 joblib = "1.2.0"
 matplotlib = "3.6.2"
+pandas = "2.2.2"
 pysam = "0.22.0"
 pytest = "7.2.0"
 scipy = "1.12.0"
