--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-cigar
-joblib
-matplotlib
-pysam
-pytest
-sourmash
-tqdm
+joblib==1.2.0
+matplotlib==3.6.2
+pandas==2.2.2
+pysam==0.22.0
+pytest==7.2.0
+scipy==1.12.0
+sourmash==4.8.4
+tqdm==4.64.1
