--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [tool.poetry]
-name = "amira_prototype"
+name = "amira"
 version = "0.0.0"
-description = "amira_prototype"
+description = "amira"
 authors = ["Daniel Anderson <dander@ebi.ac.uk>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/Danderson123/amira_prototype"
-repository = "https://github.com/Danderson123/amira_prototype"
-packages = [{include = "amira_prototype"}]
+homepage = "https://github.com/Danderson123/amira"
+repository = "https://github.com/Danderson123/amira"
+packages = [{include = "amira"}]
 keywords = ["AMR Prediction", "Genotyping", "Sequence Assembly"]
 
 [tool.poetry.scripts]
-amira_prototype = 'amira_prototype.__main__:main'
+amira = 'amira.__main__:main'
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
