--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -1,5 +1,3 @@
-# Inspired by https://github.com/mbhall88/tbpore/blob/main/.github/workflows/release-pypi.yaml
-
 name: Release on PyPI
 
 on:
@@ -14,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build and publish to pypi
+      - name: Build and publish to PyPI
         uses: JRubics/poetry-publish@v1.17
         with:
           pypi_token: ${{ secrets.PYPI_TOKEN }}
           ignore_dev_requirements: "yes"
-          repository_name: "testpypi"
-          repository_url: "https://test.pypi.org/legacy/"
+          repository_name: "pypi"
+          repository_url: "https://upload.pypi.org/legacy/"
