--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amira-amr"
-version = "0.2.0"
+version = "0.2.1"
 description = "Amira"
 authors = ["Daniel Anderson <dander@ebi.ac.uk>"]
 license = "Apache-2.0"
@@ -23,6 +23,7 @@ pytest = "7.2.0"
 setuptools = "75.3.0"
 scipy = "1.12.0"
 sourmash = "4.8.4"
+suffix-tree = "0.1.2"
 tqdm = "4.64.1"
 
 [build-system]
