--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = joblib,matplotlib,numpy,pandas,pysam,scipy,sourmash,suffix_tree,tqdm
+known_third_party = joblib,matplotlib,numpy,sourmash,suffix_tree,tqdm
