--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = ">=3.9,<3.13"
 joblib = "1.2.0"
 matplotlib = "3.6.2"
 pandas = "2.2.2"
+pyfastaq = "3.17.0"
 pysam = "0.22.0"
 pytest = "7.2.0"
 scipy = "1.12.0"
