--- a/environment.yaml
+++ b/environment.yaml
@@ -3,6 +3,8 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python=3.9
+  - pip
   - samtools=1.18
   - racon=1.4.10
   - minimap2=2.17
