--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -32,3 +32,33 @@ jobs:
               { "type": "test", "section": "Tests", "hidden": false }
             ]
           token: ${{ secrets.RELEASEPLEASEPAT }}
+
+      - name: Install Singularity
+      env:
+        SINGULARITY_VERSION: 3.5.3
+        GOPATH: /tmp/go
+      run: |
+        mkdir -p $GOPATH
+        sudo mkdir -p /usr/local/var/singularity/mnt
+        mkdir -p $GOPATH/src/github.com/sylabs
+        cd $GOPATH/src/github.com/sylabs
+        wget https://github.com/hpcng/singularity/releases/download/v${SINGULARITY_VERSION}/singularity-${SINGULARITY_VERSION}.tar.gz
+        tar -xzf singularity-${SINGULARITY_VERSION}.tar.gz
+        cd singularity
+        ./mconfig -v -p /usr/local
+        make -j `nproc 2>/dev/null || echo 1` -C ./builddir all
+        sudo make -C ./builddir install
+
+    - name: Build Singularity container
+      env:
+        SINGULARITY_RECIPE: Singularity.def
+        OUTPUT_CONTAINER: amira_${{env.RELEASE_VERSION}}.sif
+      run: |
+        ls
+        if [ -f "${SINGULARITY_RECIPE}" ]; then
+            sudo -E singularity build ${OUTPUT_CONTAINER} ${SINGULARITY_RECIPE}
+        else
+            echo "${SINGULARITY_RECIPE} is not found."
+            echo "Present working directory: $PWD"
+            ls
+        fi
