--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ amira = 'amira.__main__:main'
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 joblib = "1.2.0"
-matplotlib = "3.6.2"
+matplotlib = ">=3.6.2"
 pandas = "2.2.2"
+pre-commit = ">=4.0.0"
 pyfastaq = "3.17.0"
 pysam = "0.22.0"
 pytest = "7.2.0"
