--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ amira = 'amira.__main__:main'
 python = ">=3.9,<3.13"
 joblib = "1.2.0"
 matplotlib = ">=3.6.2"
+numpy = "1.26.4"
 pandas = "2.2.2"
 pre-commit = ">=4.0.0"
 pyfastaq = "3.17.0"
