--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ pysam = "0.22.0"
 pytest = "7.2.0"
 scipy = "1.12.0"
 setuptools = "75.3.0"
-sourmash = "4.8.14"
+sourmash = ">=4.8.4"
 suffix-tree = "0.1.2"
 tqdm = "4.66.3"
 
